[project]
name = "rl-from-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium[classic-control,toy-text]>=0.29.1",
    "numpy>=1.24.4",
    "tqdm>=4.67.0",
    "torch>=2.0.1",
    "fire>=0.6.0",
    "PyYAML>=6.0.1",
    "wandb>=0.17.0",
    "pygame>=2.5.2",
    "scipy>=1.10.0",
    "pettingzoo[mpe]>=1.24.4",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "A3C*",
    "DDPG*",
    "IQL*",
    "MAPPO*",
    "PPO*",
    "TD3*",
    "TRPO*",
    "deepQN*",
    "Qlearning*",
]
